LPS-63828 better detection of theme contextName